[workspace]
members = ["crates/zenoh-derive","crates/zenoh-nostd", "crates/zenoh-proto"]
exclude = ["platforms/zenoh-std", "platforms/zenoh-embassy"]

[workspace.package]
authors = []
categories = ["network-programming"]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."
edition = "2024"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/ZettaScaleLabs/zenoh-nostd"
rust-version = "1.90.0"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
zenoh-derive = { version = "0.1.0", path = "crates/zenoh-derive" }
zenoh-proto = { version = "0.1.0", path = "crates/zenoh-proto" }
zenoh-nostd = { version = "0.1.0", path = "crates/zenoh-nostd" }

zenoh-std = { version = "0.1.0", path = "platforms/zenoh-std" }

uhlc = { version = "0.8.1", git = "https://github.com/Hennzau/uhlc-rs", branch = "no-alloc", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

# Embassy (for async/await support)
embassy-futures = "0.1.2"
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
embassy-executor = "0.9.1"

# Heapless / static
heapless = "0.9.2"
static_cell = "2.1.1"

# Proc macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Logs
defmt = "1.0"
log = "0.4"

# Dev
rand = "0.8"
criterion = "0.7"
paste = "1.0"
env_logger = "0.10.0"
critical-section = "1.2"

[package]
name = "zenoh-examples"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[features]
default = []

log = ["zenoh-proto/log"]

[dependencies]
zenoh-proto = { workspace = true }
zenoh-nostd = { workspace = true }
zenoh-std = { workspace = true }

env_logger = { workspace = true }

embassy-executor = { workspace = true, features = ["arch-std", "executor-thread"] }
embassy-time = { workspace = true, features = ["std"] }
embassy-sync = { workspace = true  }

static_cell = { workspace = true }

critical-section = { workspace = true, features = ["std"] }

[profile.dev]
opt-level = 0
lto = false
codegen-units = 16
panic = "abort"
strip = false
incremental = true
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false
overflow-checks = false
