[workspace]
members = ["crates/zenoh-derive","crates/zenoh-nostd", "crates/zenoh-proto", "crates/zenoh-sansio"]
exclude = ["platforms/zenoh-std", "platforms/zenoh-embassy"]

[workspace.package]
authors = []
categories = ["network-programming"]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."
edition = "2024"
homepage = "http://zenoh.io"
license = "ZSA-1.0"
repository = "https://github.com/ZettaScaleLabs/zenoh-nostd"
rust-version = "1.90.0"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
zenoh-derive = { version = "0.1.0", path = "crates/zenoh-derive" }
zenoh-proto = { version = "0.1.0", path = "crates/zenoh-proto" }
zenoh-nostd = { version = "0.1.0", path = "crates/zenoh-nostd" }

uhlc = { version = "0.8.1", git = "https://github.com/Hennzau/uhlc-rs", branch = "no-alloc", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

# Embassy (for async/await support)
embassy-futures = "0.1.2"
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
embassy-executor = "0.9.1"

# Heapless / static
heapless = { version = "0.9.2", default-features = false }
static_cell = "2.1.1"

# Proc macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Logs
defmt = "1.0"
log = "0.4"
web-sys = { version = "0.3.82", features = ["console"] }

# Tests
rand = "0.9"
criterion = "0.7"
paste = "1.0"

[package]
name = "zenoh-examples"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[features]
default = ["std", "log"]
log = ["zenoh-nostd/log"]
defmt = ["zenoh-nostd/defmt"]
web_console = ["dep:web-sys"] # Use `web-sys` crate for logging in webassembly
std = [
    "dep:zenoh-std",
    "dep:env_logger",
    "embassy-executor/arch-std",
    "embassy-executor/executor-thread",
    "embassy-time/std",
    "dep:critical-section",
]
esp32s3 = [
    "dep:zenoh-embassy",
    "dep:getrandom",
    "dep:esp-bootloader-esp-idf",
    "dep:esp-hal",
    "dep:embassy-net",
    "dep:esp-alloc",
    "dep:esp-println",
    "dep:esp-rtos",
    "dep:esp-radio",
]
wasm = [
    "web_console",
    "dep:zenoh-nostd-wasm",
    "dep:getrandom",
    "dep:env_logger",
    "dep:embassy-net",
    "embassy-executor/arch-std",
    "embassy-executor/executor-thread",
    "embassy-time/std",
    "dep:critical-section",
]

[dependencies]
zenoh-nostd = { workspace = true }
static_cell = { workspace = true }
embassy-sync = { workspace = true  }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }

zenoh-std = { version = "0.1.0", path = "platforms/zenoh-std", optional = true }
zenoh-embassy = { version = "0.1.0", path = "platforms/zenoh-embassy", optional = true }
zenoh-nostd-wasm = { version = "0.1.0", path = "platforms/zenoh-nostd-wasm", optional = true }

critical-section = { version = "1.2", features = ["std"], optional = true }
env_logger = { version = "0.10", optional = true}

getrandom = { version = "0.2.16", features = ["custom"], optional = true }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"], optional = true }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"], optional = true }
embassy-net = { version = "0.7.1", features = ["defmt", "dhcpv4", "medium-ethernet", "tcp"], optional = true }
esp-alloc = { version = "0.9.0", features = ["defmt"], optional = true }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"], optional = true }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio", "embassy"], optional = true }
esp-radio = { version = "0.17.0", features = ["unstable", "defmt", "esp-alloc", "esp32s3", "smoltcp", "wifi"], optional = true }

web-sys = { version = "0.3.82", features = ["console"], optional = true }

[profile.dev]
opt-level = "s"
lto = false
codegen-units = 16
panic = "abort"
strip = false
incremental = true
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false
overflow-checks = false
