[package]
name = "zenoh-examples"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

arch-std = ["zenoh-nano/arch-std", "xcutor/arch-std"]
arch-wasm = ["zenoh-nano/arch-wasm"]

[dependencies]
zenoh-nano = { workspace = true }

[dev-dependencies]
xcutor = { workspace = true }
