[package]
name = "zenoh-examples"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dev-dependencies]
zenoh = { workspace = true }
embassy-time = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dev-dependencies]
embassy-executor = { workspace = true, features = ["executor-thread", "arch-std"] }
embassy-time = { workspace = true, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
embassy-executor = { workspace = true, features = ["executor-thread", "arch-wasm"] }
wasm-bindgen = { workspace = true }

[target.'cfg(target_arch = "xtensa")'.dev-dependencies]
embassy-executor = { workspace = true, features = ["executor-thread"] }
defmt = { workspace = true }
esp-hal-embassy = { workspace = true }
esp-hal = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
bitflags = { workspace = true }
