[package]
name = "zenoh-commons"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
ctx = ["dep:heapless"]

log = ["dep:log"]
defmt = ["dep:defmt"]
web_console = ["dep:web-sys"]

[dependencies]
heapless = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["console"], optional = true }
