[package]
name = "zenoh-nano"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

arch-std = ["zenoh-link/arch-std", "futures-timer"]
arch-wasm = []

[dependencies]
zenoh-result = { workspace = true }
zenoh-protocol = { workspace = true }

zenoh-link = { workspace = true }

zenoh-transport = { workspace = true }
futures-timer = { workspace = true, optional = true }
