[package]
name = "zenoh-nostd"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

arch-std = ["zenoh-transport/arch-std", "embassy-executor/arch-std", "embassy-time/std", "embassy-sync/std"]
arch-wasm = []

[dependencies]
zenoh-result = { workspace = true }
zenoh-buffers = { workspace = true }
zenoh-codec = { workspace = true }
zenoh-protocol = { workspace = true }

zenoh-transport = { workspace = true }

embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-futures = { workspace = true }
