[package]
name = "zenoh-sansio"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zenoh-sansio-codec.workspace = true
uhlc.workspace = true
sha3.workspace = true

[dev-dependencies]
rand.workspace = true
paste.workspace = true
criterion.workspace = true
