[package]
name = "zenoh-codec"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zenoh-log = { workspace = true }
zenoh-result = { workspace = true }
zenoh-buffer = { workspace = true }
zenoh-protocol = { workspace = true }

uhlc = { workspace = true }
heapless = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
