[package]
name = "zenoh-protocol"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zenoh-result = { workspace = true }
zenoh-keyexpr = { workspace = true }
zenoh-buffers = { workspace = true }

uhlc = { workspace = true }
const_format = { workspace = true }
heapless = { workspace = true }
