[package]
name = "zenoh-protocol"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zenoh-result = { workspace = true }
zenoh-keyexpr = { workspace = true }
zenoh-buffers = { workspace = true }

uhlc = { workspace = true }
const_format = { workspace = true }
heapless = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "linux", target_os = "macos", target_os = "windows")))'.dependencies]
getrandom = { version = "0.2.16", features = ["custom"] }
