[package]
name = "zenoh-result"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
ctx = []

[dependencies]
zenoh-log = { workspace = true }

heapless = { workspace = true }
