[package]
name = "zenoh-io"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[features]
default = []

std = []

log = ["std", "zenoh-proto/log", "zenoh-sansio/log"]
web_console = ["std", "zenoh-proto/web_console", "zenoh-sansio/web_console"]
defmt = ["zenoh-proto/defmt", "zenoh-sansio/defmt"]

[dependencies]
zenoh-proto.workspace = true
zenoh-sansio.workspace = true

paste.workspace = true
