[package]
name = "zenoh-nostd"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

defmt = []

[dependencies]
zenoh-proto.workspace = true

sha3.workspace = true

embassy-futures.workspace = true
embassy-time.workspace = true
embassy-sync.workspace = true
embassy-executor.workspace = true

heapless.workspace = true
static_cell.workspace = true
