[package]
name = "zenoh-nostd"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
log = ["zenoh-proto/log"]
defmt = ["zenoh-proto/defmt"]
web_console = ["zenoh-proto/web_console"] # Use `web-sys` crate for logging in webassembly

[dependencies]
zenoh-proto.workspace = true
sha3.workspace = true
elain.workspace = true
higher-kinded-types.workspace = true
embassy-futures.workspace = true
embassy-time.workspace = true
embassy-sync.workspace = true
heapless.workspace = true
paste.workspace = true
