[package]
name = "zenoh-nostd"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

std = []
alloc = []

log = ["std", "zenoh-proto/log"]
web_console = ["std", "zenoh-proto/web_console"]
defmt = ["zenoh-proto/defmt"]

[dependencies]
zenoh-proto.workspace = true
sha3.workspace = true
dyn-utils.workspace = true

embassy-futures.workspace = true
embassy-time.workspace = true
embassy-sync.workspace = true
heapless.workspace = true
paste.workspace = true
