[package]
name = "zenoh-proto"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

std = []

log = ["std", "dep:log"]
defmt = ["dep:defmt"]
web_console = ["std", "dep:web-sys"]

[dependencies]
zenoh-derive.workspace = true
uhlc.workspace = true
sha3.workspace = true

log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
paste.workspace = true
criterion.workspace = true

[[example]]
name = "z_flood"
path = "examples/z_flood.rs"
required-features = ["std"]

[[example]]
name = "z_drain"
path = "examples/z_drain.rs"
required-features = ["std"]
