[package]
name = "zenoh-sansio"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true

[dependencies]
zenoh-proto.workspace = true

sha3.workspace = true
