[package]
name = "zenoh-transport"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zenoh-protocol = { workspace = true }
zenoh-result = { workspace = true }
zenoh-buffers = { workspace = true }
zenoh-codec = { workspace = true }

zenoh-link-commons = { workspace = true }

async-trait = { workspace = true }
sha3 = { workspace = true }
