[package]
name = "zenoh-platform"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zenoh-result = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
zenoh-platform-std = { workspace = true }
embassy-time = { workspace = true, features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
zenoh-platform-wasm = { workspace = true }
getrandom = { workspace = true, features = ["js"] } # Ensure getrandom works for wasm32

[target.'cfg(target_arch = "xtensa")'.dependencies]
zenoh-platform-esp32 = { workspace = true }
