[package]
name = "zenoh-platform"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zenoh-result = { workspace = true }

embassy-executor = { workspace = true }
