[package]
name = "zenoh-link-tcp"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

arch-std = ["async-net", "futures-lite"]
arch-wasm = []

[dependencies]
zenoh-protocol = { workspace = true }
zenoh-result    = { workspace = true }

zenoh-link-commons = { workspace = true }

async-trait = { workspace = true }
async-net = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
