[package]
name = "zenoh-link-tcp"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["arch-std"]

arch-std = []

[dependencies]
zenoh-protocol = { workspace = true }
zenoh-result = { workspace = true }

zenoh-link-commons = { workspace = true }

async-net  = "2.0.0"
futures-lite = "2.6.1"
socket2 = { version = "0.5.7", features = ["all"] }
