[package]
name = "zenoh-platform-embassy"
authors = []
categories = ["network-programming"]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
rust-version = "1.75.0"
version = "1.5.1"

[dependencies]
defmt = "1.0.1"

zenoh-result = { version = "1.5.1", path = "../../../commons/zenoh-result" }
zenoh-platform = { version = "1.5.1", path = "../../zenoh-platform" }

embassy-executor = { version = "0.7.0" }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }

embassy-time = { version = "0.5.0", features = [] }

static_cell = "2.1.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
