[package]
name = "zenoh-platform-esp32"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
getrandom = { workspace = true, features = ["custom"] }
defmt = { workspace = true }
