[package]
name = "zenoh-platform-std"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zenoh-result = { workspace = true }

async-net = { workspace = true }
futures-lite = { workspace = true }
socket2 = { workspace = true }

env_logger = { workspace = true }
log = { workspace = true }
