[package]
name = "zenoh-platform-std"
authors = []
categories = ["network-programming"]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
rust-version = "1.75.0"
version = "1.5.1"

[dependencies]
async-net = "2.0.0"
futures-lite = "2.6.1"
log = "0.4.28"
socket2 = { version = "0.5.7", features = ["all"] }

zenoh-result = { version = "1.5.1", path = "../../../commons/zenoh-result" }
zenoh-platform = { version = "1.5.1", path = "../../zenoh-platform" }

[dev-dependencies]
env_logger = "0.11.8"

zenoh = { version = "1.5.1", path = "../../../zenoh" }

embassy-executor = { version = "0.9.0", features = ["executor-thread", "arch-std"] }
embassy-time = { version = "0.5.0", features = ["std"] }
