[package]
name = "zenoh-platform-wasm"
authors = []
categories = ["network-programming"]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
rust-version = "1.75.0"
version = "1.5.1"

[dependencies]
zenoh-result = { version = "1.5.1", path = "../../../commons/zenoh-result" }
zenoh-platform = { version = "1.5.1", path = "../../zenoh-platform" }
wasm-bindgen = "0.2.104"
