[package]
name = "zenoh-platform-wasm"
authors = []
categories = ["network-programming"]
description = "Zenoh: The Zero Overhead Pub/Sub/Query Protocol."
edition = "2021"
homepage = "http://zenoh.io"
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
rust-version = "1.75.0"
version = "1.5.1"

[dependencies]
zenoh-result = { version = "1.5.1", path = "../../../commons/zenoh-result" }
zenoh-platform = { version = "1.5.1", path = "../../zenoh-platform" }

wasm-bindgen = "0.2.104"
futures-lite = "2.6.1"
async-wsocket = "0.13.1"
web-sys = { version = "0.3.81", features = ["console"] }

[dev-dependencies]
zenoh = { version = "1.5.1", path = "../../../zenoh" }
embassy-executor = { version = "0.9.0", features = ["executor-thread", "arch-wasm"] }
embassy-time = { version = "0.5.0", features = ["wasm"] }
getrandom = { version = "0.3.3", features = ["std", "wasm_js"] }
static_cell = "2.1.1"

[[example]]
name = "z_put"
path = "examples/z_put.rs"
crate-type = ["cdylib"]
