[package]
name = "example-esp32c2"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = "0.2.16"
defmt = "1.0.1"
zenoh = { version = "1.5.1", path = "../../../../zenoh" }
zenoh-platform-embassy  = { version = "1.5.1", path = ".." }

esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c2"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32c2",
  "unstable",
] }

embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32c2"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32c2"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32c2",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = "2.1.1"
heapless = { version = "0.9.1" }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
spin = { version = "0.10.0", features = ["portable-atomic"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
